# Kaggle

./: pyproject.toml
CarPricing/: main.ipynb
MedicalCosts/: Main.ipynb
Spaceship Titanic/: Competition - Standalone Models.ipynb  Competition.ipynb  Competiton ML with Bagging.ipynb  EDA - Train x Test Features.ipynb  EDA.ipynb  Feature Enginnering Studies.ipynb  ML - Bagging Models.ipynb  ML - GBM.ipynb  ML - K-NN.ipynb  ML - LR.ipynb  ML - Logistic Regression.ipynb  ML - MLP.ipynb  ML - Random Forest.ipynb  ML - Xgboost.ipynb  Main.ipynb  Treatment and EDA.ipynb
Spaceship Titanic/data/: submission_gbm_2022-11-22.csv  submission_logreg_2022-10-29.csv
Spaceship Titanic/data/ensemble/: knn.csv  lr.csv
Spaceship Titanic/spaceship_titanic/: feature_enginnering.py
