[tool.poetry]
name = "kaggle"
version = "0.1.0"
description = ""
authors = ["Gustavo de Souza Gonçalves <goncalves.gustavo211@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
seaborn = "^0.12.0"
pandas = "^1.5.0"
numpy = "^1.23.4"
polars = "^0.14.19"
statsmodels = "^0.13.2"
scikit-learn = "^1.1.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
